--- a/tripcost/package.json
+++ b/tripcost/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.1",
+    "mongodb": "^4.7.0",
     "update": "^0.7.4"
   }
 }
